bootstrap/argo-cd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/conditions.argogrpc: |
        [{"field":"http-header","httpHeaderConfig":{"httpHeaderName": "Content-Type", "values":["application/grpc"]}}]
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/target-type: 'ip'
    alb.ingress.kubernetes.io/scheme: internet-facing
  name: argocd
spec:
rules:
- host: argocd.iroha-s.jp
    http:
    paths:
    - path: /
        backend:
        service:
            name: argogrpc
            port:
            number: 443
        pathType: Prefix
    - path: /
        backend:
        service:
            name: argocd-server
            port:
            number: 443
        pathType: Prefix
tls:
- hosts:
    - argocd.argoproj.io
